--- a/public/enduser/assets/css/main.css
+++ b/public/enduser/assets/css/main.css
@@ -143,7 +143,7 @@ img[src="assets/images/blank.gif"] {
   -ms-transition: all linear 0.2s;
   -o-transition: all linear 0.2s;
   transition: all linear 0.2s;
-  background: #e40046;
+  background: #34495e;
   color: #fff;
   border: none;
   font-size: 13px;
@@ -1097,8 +1097,7 @@ a {
 .top-bar {
   padding:0px;
   font-size: 11px;
-  background:#c7003d
-}
+  background:#2c3e50}
 .top-bar .cnt-account {
   float: right;
   padding: 6px 0px;
@@ -1194,7 +1193,7 @@ a {
 /*===================================================================================*/
 /* Header
 /*===================================================================================*/
-header{background:#e40046}
+header{background:#34495e}
 
 .main-header {
   padding:0px 0px 0px 0px;
@@ -1231,7 +1230,7 @@ header{background:#e40046}
   -moz-border-radius: 5px 0 0 5px;
   border-radius: 5px 0 0 5px;
   padding:10px 13px;
-  width: 67%;
+  width: 62%;
 }
 .main-header .top-search-holder .search-area .categories-filter {
   border-right: 1px solid #E0E0E0;
@@ -1275,17 +1274,17 @@ header{background:#e40046}
   line-height: 30px;
 }
 .main-header .top-search-holder .search-area .search-button {
-  border-radius: 0px 3px 3px 0px;
-  display: inline-block;
-  float: right;
-  margin: 0px;
-  padding: 9px 19px 9px;
-  text-align: center;
-    background-color: #3b4348;
-    border: 1px solid #3b4348;
+    border-radius: 0px 3px 3px 0px;
+    display: inline-block;
+    float: right;
+    margin: 0px;
+    padding: 9px 19px 9px;
+    text-align: center;
+    background-color: #eee;
+    border: 1px solid #e1e1e1;
 }
 .main-header .top-search-holder .search-area .search-button:after {
-  color: #fff;
+  color: #666;
   content: "\f002";
   font-family: fontawesome;
   font-size: 16px;
@@ -1306,7 +1305,7 @@ header{background:#e40046}
 .top-cart-row .top-cart:before{
 content:"\f290";
 font-family:FontAwesome;
-background:#ce003f;
+background:#3498db;
 color:#fff;
 display:inline-block;
 padding:0px;
@@ -1321,7 +1320,7 @@ font-size:18px}
 
 .top-cart-row .dropdown-cart .lnk-cart {
   padding: 12px 0px 12px 20px;
-    border-left: 1px solid #d40041;
+    border-left: 1px solid #2c3e50;
   display: inline-block;
   color: #fff;
 }
@@ -1350,7 +1349,7 @@ font-size:18px}
     top: 13px;
     width: 18px;
     background: #fdd922;
-    color: #e40046;
+    color: #34495e;
     font-size: 11px;
     text-align: center;
     line-height: 19px;;
@@ -1417,7 +1416,7 @@ font-size:18px}
   padding: 0;
 }
 .header-style-1 .header-nav .navbar-default .navbar-collapse .navbar-nav > li.active > a {
-  color: #e40046;
+  color: #34495e;
   font-weight: bold;
   padding-bottom:15px
 }
@@ -1746,14 +1745,14 @@ font-size:18px}
   top: 0 !important;
   left: 100%;
   margin: 0;
-  min-width: 330%;
+  min-width: 300%;
   /*338%;*/
   position: absolute;
   top: 0px;
   -webkit-border-radius: 0px;
   -moz-border-radius: 0px;
   border-radius: 0px;
-  border-right: 2px solid #e40046;
+  border-right: 2px solid #34495e;
   overflow:hidden
 }
 .sidebar .side-menu nav .nav > li > .mega-menu .yamm-content {
@@ -2748,10 +2747,11 @@ age-container #owl-main .owl-next {
   position: absolute;
 }
 .product .product-info .name {
-  font-size: 14px;
-  font-family: 'Open Sans', sans-serif;
+    font-size: 14px;
+    font-family: 'Open Sans', sans-serif;
+    float: left;
+    width: 100%;
 }
-
 .product .product-info .name a {
   color: #555;
 }
@@ -2796,7 +2796,7 @@ age-container #owl-main .owl-next {
 }
 .product .cart .action ul li.lnk {
   margin: 10px 0px;
-      background: #e40046;
+      background: #34495e;
     margin: 0px;
     padding: 8px 2px;
 	border-left:1px solid hsla(0,0%,100%,.4);
@@ -2808,7 +2808,7 @@ age-container #owl-main .owl-next {
   padding: 8px 10px;
 }
 .product .cart .action ul li.lnk.wishlist {
-	background:#e40046;
+	background:#34495e;
 	margin:0px;
 	border-radius:0px
 	
@@ -2840,6 +2840,7 @@ age-container #owl-main .owl-next {
 }
 .tag.hot {
   background: #ff7878;
+  display:none;
 }
 .product:hover .cart {
   opacity: 1;
@@ -2981,7 +2982,7 @@ age-container #owl-main .owl-next {
 }
 .cnt-strip .strip h2 {
   font-size: 36px;
-  color: #e40046;
+  color: #34495e;
   margin: 0;
   text-transform: uppercase;
   font-family:'Montserrat', sans-serif;
@@ -3797,7 +3798,8 @@ age-container #owl-main .owl-next {
     letter-spacing: 0.5px;
 }
 .product-list.product .product-info .name {
-  font-size: 18px;
+    font-size: 18px;
+    margin-top: 0px;
 }
 .product-list.product .product-info .description {
   line-height: 20px;
